gitops/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minitube-app
  labels:
    app.kubernetes.io/part-of: minitube
    app.kubernetes.io/managed-by: argocd
