gitops/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: minitube-app
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: minitube
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
  ports:
    - port: 80
      targetPort: 8000
